fix(pr-be-7): codex iter-3 p0/p1 absorb + webfilter behavior tests
Codex post-impl review verdict: REVISE — 2 P0 blockers + 4 P1/P2.

P0 #1 — Cookie name regression (telemetry)
  Previous: detectAuthMode searched 'auth_token=' in raw Cookie header
  Bug: gateway cookie is 'erp_access_token' (3 places confirmed:
    AuthCookieEndpoint, CookieToAuthHeaderFilter,
    CookieAwareBearerTokenConverter)
  Symptom: cookie-bearing requests counted as auth_mode=none, which
    the planned alert filters out via auth_mode!='none' — actual
    storm signal would be invisible
  Fix: use exchange.getRequest().getCookies().containsKey('erp_access_token')
  Static constant AUTH_COOKIE_NAME pinned at filter for future readers.

P1 #2 — Token-null gate list halved burst
  Previous: List.of(ipBucket, tokenBucket == null ? ipBucket : tokenBucket)
    consumed IP token TWICE for unauthenticated callers
  Symptom: burst=20 became effective burst=10 for no-token POST
    /api/auth/cookie clients
  Fix: conditional list — singletonList(ipBucket) when no token,
    List.of(ipBucket, tokenBucket) when token present
  Test pinned: noTokenDoesNotHalveBurst — 4 consecutive POSTs with
    burst=4 must all succeed for no-token caller.

P1 #3 — MultiBucketGate honest naming (soft, not strong-atomic)
  Codex iter-3: javadoc said 'On denial, NO bucket has a token
    consumed' but phase-2 contention forfeits already-consumed
    tokens; semantics is soft, not strong-atomic
  Fix: rewrite class javadoc to make the soft contract explicit;
    rationale (HPA replicas multiply threshold cluster-wide;
    forfeit-on-contention bounded by burst; stronger needs
    deadlock-prone ordered lock or refund/reservation)
  Behavior unchanged — only documentation honesty.

P1 #4 — WebFilter behavior tests (this PR's main hole)
  + GatewayAuthTelemetryWebFilterTest (5):
    - cookie auth → cookie tag
    - bearer auth → bearer tag
    - no auth → none tag
    - 200 OK → no counter increment
    - 403 → forbidden co